--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     const blueIcon = (c='#2563eb') => L.circleMarker([0,0], { radius: 5, color:c, fillColor:c, fillOpacity:0.9, weight:1 });
 
     let dataRows = [];
-    let currentRadiusKm = 20;
+    let currentRadiusKm = 20; // default fallback
 
     function draw() {
       redLayer.clearLayers();
@@ -96,7 +96,7 @@
       });
 
       if (latlngs.length) map.fitBounds(latlngs, { padding: [20,20] });
-      document.getElementById('counts').textContent = `Reds: ${reds} | Blues: ${blues}`;
+      document.getElementById('counts').textContent = `Reds: ${reds} | Blues: ${blues} | Radius: ${currentRadiusKm} km`;
     }
 
     document.getElementById('applyRadius').addEventListener('click', () => {
@@ -113,9 +113,15 @@
       dynamicTyping: true,
       complete: (results) => {
         dataRows = results.data;
-        // default radius matches file used to compute
-        const sample = dataRows.find(r => Number.isFinite(Number(r.lat)));
-        // keep input default as 20 unless user changes
+
+        // Auto-detect radius_km from CSV (first row with a value wins)
+        const rowWithRadius = dataRows.find(r => r.radius_km !== undefined && r.radius_km !== null && r.radius_km !== '');
+        if (rowWithRadius && Number(rowWithRadius.radius_km)) {
+          currentRadiusKm = Number(rowWithRadius.radius_km);
+          const input = document.getElementById('radiusKm');
+          if (input) input.value = currentRadiusKm;
+        }
+
         draw();
       },
       error: (err) => console.error(err)
